# llm-zoomcamp-2026

./: README.md  pyproject.toml
Homework_1/.ipynb_checkpoints/: notebook-checkpoint.ipynb
llm-zoomcamp-2026-code/: notebook.ipynb  rag_helper.py
llm-zoomcamp-hw1/: .gitignore  notebook.ipynb
llm-zoomcamp-hw2/: notebook.ipynb
